@@ -2,4 +2,11 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 <herd>net-p2p</herd>
+<maintainer>
+<email>cooldwind@gmail.com</email>
+<name>Santiago M. Mola Velasco</name>
+</maintainer>
+<maintainer>
+<email>armin76@gentoo.org</email>
+</maintainer>
 </pkgmetadata>
